--- a/TestMVC/Views/Home/List.cshtml
+++ b/TestMVC/Views/Home/List.cshtml
@@ -6,8 +6,13 @@
 
 <h2>List</h2>
 <ul>
-    @foreach (var item in ListModel.getEventList())
-	{
-		<li>@item.title @item.description = @item.location</li>
-	}
+    @{
+        var counter = 0;
+        foreach (var item in ListModel.getEventList())
+	    {
+            counter++;
+		    <li><a href="/home/details?id=@counter">@item.title @item.description = @item.location</a></li>
+	    }    
+    }
+    
 </ul>
