--- a/TestMVC/Views/Home/Index.cshtml
+++ b/TestMVC/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-
+<link href="~/home/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" />
 <h2>Index</h2>
+<a href="/home/index">HOME</a> | <a href="/home/addevent">ADD NEW EVENT</a> | <a href="/home/list">EVENTS</a>
