--- a/TestMVC/Views/Home/List.cshtml
+++ b/TestMVC/Views/Home/List.cshtml
@@ -3,8 +3,10 @@
 @{
     ViewBag.Title = "List";
 }
-
+<link href="~/home/style.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" />
 <h2>List</h2>
+<a href="/home/index">HOME</a> | <a href="/home/addevent">ADD NEW EVENT</a> | <a href="/home/list">EVENTS</a>
 <ul>
     @{
         var counter = 0;
