--- a/TestMVC/Views/Home/Details.cshtml
+++ b/TestMVC/Views/Home/Details.cshtml
@@ -8,7 +8,13 @@
 <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css"/>
 <h2>List</h2>
 <a href="/home/index">HOME</a> | <a href="/home/addevent">ADD NEW EVENT</a> | <a href="/home/list">EVENTS</a>
-<h4>@item.title @item.description = @item.location</h4>
-@item.details
+<h4>@item.title</h4> 
+
+<p>@item.description</p>
+<p>@item.details</p>
+<p>@item.location</p>
+<p>(@item.dateFrom.ToString() - @item.dateTo.ToString())</p>
+
+
 <input type="button" value="Join" style="btn btn-default"/>
 
