--- a/TestMVC/Views/Home/AddEvent.cshtml
+++ b/TestMVC/Views/Home/AddEvent.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
     ViewBag.Title = "AddEvent";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<link href="~/home/style.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" />
-<h2>AddEvent</h2>
-<a href="/home/index">HOME</a> | <a href="/home/addevent">ADD NEW EVENT</a> | <a href="/home/list">EVENTS</a>
+
 <form method="post" action="">
     <section class="form-element">
         <p>Enter name</p>
