--- a/TestMVC/Views/Home/Details.cshtml
+++ b/TestMVC/Views/Home/Details.cshtml
@@ -1,20 +1,17 @@
-﻿@using TestMVC.Models;
-@model ListModel
+﻿
+@model TestMVC.Models.Event
 @{
-    ViewBag.Title = "dtails";
-    var item = ViewBag.Event;
+    ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<link href="~/home/style.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css"/>
-<h2>List</h2>
-<a href="/home/index">HOME</a> | <a href="/home/addevent">ADD NEW EVENT</a> | <a href="/home/list">EVENTS</a>
-<h4>@item.title</h4> 
 
-<p>@item.description</p>
-<p>@item.details</p>
-<p>@item.location</p>
-<p>(@item.dateFrom.ToString() - @item.dateTo.ToString())</p>
+
+<h4>@Model.title</h4> 
+
+<p>@Model.description</p>
+<p>@Model.details</p>
+<p>@Model.location</p>
+<p>(@Model.dateFrom.ToString() - @Model.dateTo.ToString())</p>
 
 
 <input type="button" value="Join" style="btn btn-default"/>
-
