--- a/TestMVC/Views/Events/Index.cshtml
+++ b/TestMVC/Views/Events/Index.cshtml
@@ -5,13 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<table>
+<table class="table table-striped table-hover ">
     <tr>
         <th>Event</th>
         <th>Description</th>
         <th>Location</th>
         <th>Date(from)</th>
         <th>Date (to)</th>
+        <th></th>
     </tr>   
 @{
     var counter = 0;
