--- a/TestMVC/Content/style.css
+++ b/TestMVC/Content/style.css
@@ -2,26 +2,12 @@
     margin: 5px;
 }
 body{
-    padding: 20px;
-}
-nav ul {
-    font-size: 1.5em;
-    display: inline;
-    list-style-type: none;
-}
-nav ul li {
-    display: inline;
-    margin-right: 10px;
+    padding: 0;
+    margin: 0;
 }
 div.display-label {
     font-size: 1.4em;
 }
-table th {
-    padding: 10px;
-}
-table td {
-    max-width: 150px;
-    white-space: nowrap;
-    overflow: hidden;
-    padding: 5px;
+table,th{
+    text-align: center;
 }
