--- a/TestMVC/Views/Shared/_Layout.cshtml
+++ b/TestMVC/Views/Shared/_Layout.cshtml
@@ -9,13 +9,21 @@
 </head>
   
 <body>
-    <h2>@ViewBag.Title</h2>
-    <nav>
-        <ul class="menu">
-            <li>@Html.RouteLink("HOME", "Home")</li>
-            <li>@Html.RouteLink("EVENTS", "Events")</li>
-        </ul>
-    </nav>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">@ViewBag.Title</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.RouteLink("HOME", "Home")</li>
+                        <li>@Html.RouteLink("EVENTS", "Events")</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
     @RenderBody()
 </body>
 </html>
