Some visual improvements
Added thead and tbody tags and regrouped details info

--- a/TestMVC/Views/Events/Details.cshtml
+++ b/TestMVC/Views/Events/Details.cshtml
@@ -7,9 +7,10 @@
 
 <div class="jumbotron">
   <h1>@Model.Title</h1>
-    <p>@Model.Location</p>
+    <h2>Starts at @Model.DateFrom</h2>
+    <h2>Ends at @Model.DateTo</h2>
+    <p>Location: @Model.Location</p>
     <p>@Model.Description</p>
-    <p>@Model.Details</p>
-    <p>@Model.DateFrom - @Model.DateTo</p>
+    <p>@Model.Details</p>    
   <p><a class="btn btn-primary btn-lg">Join</a></p>
 </div>
