--- a/TestMVC/Views/Events/Index.cshtml
+++ b/TestMVC/Views/Events/Index.cshtml
@@ -6,25 +6,29 @@
 }
 
 <table class="table table-striped table-hover ">
-    <tr>
-        <th>Event</th>
-        <th>Description</th>
-        <th>Location</th>
-        <th>Date(from)</th>
-        <th>Date (to)</th>
-        <th></th>
-    </tr>   
-@{
-    foreach (var item in Model)
-	{
+    <thead>
         <tr>
-            <td>@item.Title</td>
-            <td>@item.Description</td>
-            <td>@item.Location</td>
-            <td>@item.DateFrom.ToString()</td>
-            <td>@item.DateTo.ToString()</td>
-            <td>@Html.ActionLink("JOIN", "Details", "Events", new {id=item.ID}, null)</td>
+            <th>Event</th>
+            <th>Description</th>
+            <th>Location</th>
+            <th>Date(from)</th>
+            <th>Date (to)</th>
+            <th></th>
         </tr>
-	}    
-}
+    </thead> 
+    <tbody>
+        @{
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Title</td>
+                    <td>@item.Description</td>
+                    <td>@item.Location</td>
+                    <td>@item.DateFrom.ToString()</td>
+                    <td>@item.DateTo.ToString()</td>
+                    <td>@Html.ActionLink("Details", "Details", "Events", new { id = item.ID }, null)</td>
+                </tr>
+            }
+        }
+    </tbody>
 </table>
