Added custom 404 page and minor fixes
Added ErrorController, some minor visual fixes, removed date from h-tag,
fixed routing and date now nullable

--- a/TestMVC/Content/style.css
+++ b/TestMVC/Content/style.css
@@ -15,4 +15,8 @@ table,th{
     text-align: center;
     margin: 0 auto;
     width: 70%;
+    padding: 15px;
+}
+.jumbotron .lead {
+    font-weight: 400;
 }
