--- a/TestMVC/Views/Events/Index.cshtml
+++ b/TestMVC/Views/Events/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<TestMVC.Models.Event>
+@model IEnumerable<TestMVC.Models.EventViewModel>
 @{
     ViewBag.Title = "List";
     Layout = "~/Views/Shared/_Layout.cshtml";
