--- a/TestMVC/Views/Events/Details.cshtml
+++ b/TestMVC/Views/Events/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model TestMVC.Models.Event
+@model TestMVC.Models.EventViewModel
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
