Fixed some naming's of variables
Mainly changed names of local variables and also a name of a rote. I
think AddEvent instead of addEvent will be better.

--- a/TestMVC/Views/Events/Index.cshtml
+++ b/TestMVC/Views/Events/Index.cshtml
@@ -26,7 +26,7 @@
                     <td>@item.Location</td>
                     <td>@item.DateFrom.ToString()</td>
                     <td>@item.DateTo.ToString()</td>
-                    <td>@Html.ActionLink("Details", "Details", "Events", new { id = item.ID }, new { @class = "btn btn-default" })</td>
+                    <td>@Html.ActionLink("Details", "Details", "Events", new { id = item.Id }, new { @class = "btn btn-default" })</td>
                 </tr>
             }
         }
