--- a/TestMVC/Views/Shared/_Layout.cshtml
+++ b/TestMVC/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>@Html.RouteLink("HOME", "Home")</li>
-                        <li>@Html.RouteLink("ADD EVENT", "addEvent")</li>
+                        <li>@Html.RouteLink("ADD EVENT", "AddEvent")</li>
                         <li>@Html.RouteLink("EVENTS", "Events")</li>
                     </ul>
                 </div>
