--- a/TestMVC/Views/Events/AddEvent.cshtml
+++ b/TestMVC/Views/Events/AddEvent.cshtml
@@ -38,4 +38,6 @@
     <div class="form-element">
         <input type="submit" value="Отправить" class="btn btn-default" />
     </div>
+    
+    @Html.ValidationSummary()
 }
