--- a/TestMVC/Views/Shared/_Layout.cshtml
+++ b/TestMVC/Views/Shared/_Layout.cshtml
@@ -17,14 +17,37 @@
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li>@Html.RouteLink("HOME", "Home")</li>
-                        <li>@Html.RouteLink("ADD EVENT", "AddEvent")</li>
-                        <li>@Html.RouteLink("EVENTS", "Events")</li>
+                        @{
+                            string routeName = ViewContext.RouteData.DataTokens.Values.ElementAt(0).ToString();
+                        <li>@NavigationLink("HOME", "Home", @routeName)</li>
+                        <li>@NavigationLink("ADD EVENT", "AddEvent", @routeName)</li>
+                        <li>@NavigationLink("EVENTS", "Events", @routeName)</li>
+                        }
                     </ul>
                 </div>
             </div>
         </nav>
 
     @RenderBody()
+
+    <script src="~/scripts/jquery-1.8.3.js"></script>
+    <script src="~/scripts/jquery.validate.js"></script>
+    <script src="~/scripts/jquery.validate.unobtrusive.js"></script>
 </body>
 </html>
+
+@helper NavigationLink(string linkName, string routeName, string currentRouteName)
+{
+    if (string.Equals(routeName, currentRouteName, StringComparison.InvariantCultureIgnoreCase))
+    {
+        <li class="item active">
+            <p>@linkName</p>
+        </li>
+    }
+    else
+    {
+        <li class="item">
+            @Html.RouteLink(@linkName, routeName)
+        </li>
+    }
+}
