--- a/TestMVC/Content/style.css
+++ b/TestMVC/Content/style.css
@@ -24,3 +24,10 @@ form {
     width: 40%;
     margin: 0 auto;
 }
+.active-link {
+    
+}
+.nav navbar-nav {
+    vertical-align: middle;
+    color: white;
+}
